All_Component_DX/force-app/main/default/objects/SM_Default_Checklist_Response__c/fields/SM_Default_Response__c.field-meta.xml
<CustomField>
    <fullName>SM_Default_Response__c</fullName>
    <description>Field to hold default response values in JSON form</description>
    <inlineHelpText>Field to hold default response values in JSON form</inlineHelpText>
    <label>Default Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>