All_Component_DX/force-app/main/default/objects/SM_Default_Checklist_Response__c/fields/SM_Is_literal_Used__c.field-meta.xml
<CustomField>
    <fullName>SM_Is_literal_Used__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to identifying Literal is used or not in JSON</description>
    <inlineHelpText>Flag to identifying Literal is used or not in JSON</inlineHelpText>
    <label>Is literal Used ?</label>
    <type>Checkbox</type>
</CustomField>