All_Component_DX/force-app/main/default/objects/SM_Default_Checklist_Response__c/fields/SM_Question__c.field-meta.xml
<CustomField>
    <fullName>SM_Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Question</label>
    <referenceTo>Question_Bank__c</referenceTo>
    <relationshipLabel>Default Checklist Responses</relationshipLabel>
    <relationshipName>Default_Checklist_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>